# fantasy_commenter

./: .gitignore  ecrData.json  fantasyPros.html  pyproject.toml
news_service/: helpers.py  news.py
rankings_service/: fantasypros.py  main.py  rankings.py
rankings_service/docker/: init.sql
scraping/: fantasyPros.py
sleeper_service/: README.md  main.py  players.json  pyproject.toml
sleeper_service/src/: config.py  positional_types.py  sleeper_api_cliient.py  types.py  utils.py
src/: README.md  player_name_map.py  pyproject.toml  requirements.txt  sleeper_id_map.py
src/fantasy_ai/leagues_service/: league.py
src/fantasy_ai/news_service/: helpers.py  main.py  news.py  player_context.py  requirements.txt
src/fantasy_ai/rankings_service/: main.py
src/fantasy_ai/rankings_service/helpers/: generic_helpers.py
src/fantasy_ai/rankings_service/rankings/: fantasypros.py
src/fantasy_ai/sleeper_service/: main.py
src/fantasy_ai/sleeper_service/helpers/: data_helpers.py  types.py
src/fantasy_ai/trades_service/: trades.py
src/news_service/: helpers.py  main.py
src/rankings_service/: fantasypros.py
src/rankings_service/docker/: docker-compose.yml
