[tool.poetry]
name = "fantasy-ai"
version = "0.1.0"
description = ""
authors = ["James Spillmann <james@spacinsider.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.1"
bs4 = "^0.0.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
